# hangul

./: .gitignore  Makefile  README.md  pyproject.toml
hangul/: __main__.py
